[package]
name = "Rust-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.*", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"
luban_macros = "0.1.1"